--- a/singapore/index.html
+++ b/singapore/index.html
@@ -3,8 +3,8 @@
 		<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-			<link rel="stylesheet" href="css/bootstrap.min.css">
-			<link rel="stylesheet" href="css/style.css">
+			<link rel="stylesheet" href="src/css/bootstrap.min.css">
+			<link rel="stylesheet" href="src/css/style.css">
 			<script src="https://kit.fontawesome.com/24dc904e36.js" crossorigin="anonymous"></script>
 
 			<title>SINGAPORE</title>
@@ -127,13 +127,13 @@
 			  	</ol>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-						    <img src="img/s1.jpg" class="d-block w-100" alt="...">
+						    <img src="src/img/s1.jpg" class="d-block w-100" alt="...">
 						</div>
 						<div class="carousel-item">
-						    <img src="img/s2.jpg" class="d-block w-100" alt="...">
+						    <img src="src/img/s2.jpg" class="d-block w-100" alt="...">
 						</div>
 						<div class="carousel-item">
-						    <img src="img/s3.jpg" class="d-block w-100" alt="...">
+						    <img src="src/img/s3.jpg" class="d-block w-100" alt="...">
 						</div>
 				    </div>
 						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -163,13 +163,13 @@
 			  </ol>
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="img/flag.jpg" class="d-block w-100" alt="...">
+			      <img src="src/img/flag.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block bp">
 			        <h5>Флаг</h5>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
-			      <img src="img/gerb.png" class="d-block w-100" alt="...">
+			      <img src="src/img/gerb.png" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block bp">
 			        <h5>Герб</h5>
 			      </div>
@@ -212,7 +212,7 @@
 			</p>
 		<h3><strong>Гимн</strong></h3>
 			<audio autoplay="autoplay" loop="loop" controls="controls">
-				<source src="mp/gymn.mp3">
+				<source src="src/mp/gymn.mp3">
 			</audio>
 			<br>
 			<br>
@@ -290,13 +290,13 @@
 			  </ol>
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="img/bank.jpg" class="d-block w-100" alt="...">
+			      <img src="src/img/bank.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block bp">
 			        <h5>Банкнота</h5>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
-			      <img src="img/bank2.jpg" class="d-block w-100" alt="...">
+			      <img src="src/img/bank2.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block bp">
 			        <h5>Монета</h5>
 			      </div>
@@ -338,9 +338,9 @@
 </div>
 
 			<script src="https://kit.fontawesome.com/24dc904e36.js" crossorigin="anonymous"></script>
-			<script src="js/jquery-3.4.1.min.js"></script>
-			<script src="js/popper.min.js"></script>
-			<script src="js/bootstrap.min.js"></script>
-			<script src="js/main.js"></script>
+			<script src="src/js/jquery-3.4.1.min.js"></script>
+			<script src="src/js/popper.min.js"></script>
+			<script src="src/js/bootstrap.min.js"></script>
+			<script src="src/js/main.js"></script>
 		</body> 
 	</html>
