--- a/singapore/src/dos.html
+++ b/singapore/src/dos.html
@@ -25,13 +25,13 @@
                               Главная
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="index.html">Главная</a>
-                              <a class="dropdown-item" href="index.html#gerb">Герб</a>
-                               <a class="dropdown-item" href="index.html#flag">Флаг</a>
-                                <a class="dropdown-item" href="index.html#yazik">Язык</a>
-                                <a class="dropdown-item" href="index.html#karta">Карта</a>
-                                <a class="dropdown-item" href="index.html#pol">Политика</a>
-                                <a class="dropdown-item" href="index.html#val">Валюта</a>
+                              <a class="dropdown-item" href="../index.html">Главная</a>
+                              <a class="dropdown-item" href="../index.html#gerb">Герб</a>
+                               <a class="dropdown-item" href="../index.html#flag">Флаг</a>
+                                <a class="dropdown-item" href="../index.html#yazik">Язык</a>
+                                <a class="dropdown-item" href="../index.html#karta">Карта</a>
+                                <a class="dropdown-item" href="../index.html#pol">Политика</a>
+                                <a class="dropdown-item" href="../index.html#val">Валюта</a>
                     
                             </div>
                     </li>
