--- a/singapore/src/dos.html
+++ b/singapore/src/dos.html
@@ -97,15 +97,15 @@
                                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                   Дополнительно
                                                 </a>
-                                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                	<a class="dropdown-item" href="dos.html">Достопримечательности</a>
-                                                  <a class="dropdown-item" href="#">Видео</a>
-                                                  <a class="dropdown-item" href="#">Фото</a>
-                                                   <a class="dropdown-item" href="#">Тестирование</a>
-                                                    <a class="dropdown-item" href="#">Контакты</a>
-                                                  <div class="dropdown-divider"></div>
-                                                  <a class="dropdown-item" href="#">Прочее</a>
-                                                </div>
+                                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="dos.html">Достопримечательности</a>
+                              <a class="dropdown-item" href="video.html">Видео</a>
+                              <a class="dropdown-item" href="photo.html">Фото</a>
+                               <a class="dropdown-item" href="#">Тестирование</a>
+                                <a class="dropdown-item" href="contact.html">Контакты</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="another.html">Прочее</a>
+                            </div>
                                         </li>
 			
 									</ul>
