--- a/singapore/index.html
+++ b/singapore/index.html
@@ -211,8 +211,8 @@
 				Национальный флаг Республики Сингапур впервые был утвержден 3 декабря 1959 года, когда страна входила в состав Британской империи.8 августа 1965 года флаг был вновь утвержден как флаг независимого государства.
 			</p>
 		<h3><strong>Гимн</strong></h3>
-			<audio autoplay="autoplay" loop="loop" controls="controls">
-				<source src="src/mp/gymn.mp3">
+			<audio autoplay loop controls>
+				<source src="src/mp/gymn.mp3" type="audio/mp3">
 			</audio>
 			<br>
 			<br>
