--- a/singapore/src/culture.html
+++ b/singapore/src/culture.html
@@ -268,6 +268,59 @@
 	<p>
 		Самый известный алкогольный напиток в Сингапуре - коктейль «Сингапурский слинг», его придумали около 100 лет назад. В состав этого коктейля входит вишневый бренди, гренадин, лайм, ананас, и несколько ликеров.
 	</p>
+	<h3><strong>Праздники</strong></h3>
+	<ul>
+		<li>1 января — Новый год</li>
+		<li>19-20 февраля — Первый и второй день Китайского Нового года</li>
+		<li>3 апреля — Страстная пятница</li>
+		<li>1 мая — День труда</li>
+		<li>1 июня — Буддийский праздник в честь рождения, просветления и ухода в паринирвану Гаутамы Будды</li>
+		<li>17 июля — Мусульманский праздник в честь окончания месяца Рамадан</li>
+		<li>
+			9 августа — День Независимости Сингапура
+		</li>
+		<li>
+			24 сентября — Хари Райа Хаджи — Мусульманский «праздник жертвоприношения»
+		</li>
+		<li>
+			10 ноября — Дипавали — Главный индуистский праздник, символизирующий победу добра над злом. В знак этой победы повсеместно зажигаются свечи и фонарики
+		</li>
+		<li>
+			25 декабря — Рождество
+		</li>
+
+	</ul>
+	<h3 id="nac"><strong>Национальная одежда</strong></h3>
+	<br>
+	<div id="carouselExampleCaptions" class="carousel slide minimize70 displayed" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="img/singnac.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block bp">
+			        <h5>Современный костюм</h5>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="img/singnac2.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block bp">
+			        <h5>Сингапурско-китайский</h5>
+			      </div>
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+			<br><br><br>
 </div>
 
 <div class="finish">
