--- a/singapore/src/religion.html
+++ b/singapore/src/religion.html
@@ -145,6 +145,46 @@
 						</a>
 					</div>	
 				</div>
+
+
+
+
+
+
+				<div class="container">
+					<div class="progress">
+					  <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
+					  <p>Буддизм</p>
+					</div>
+				
+
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 18%" aria-valuenow="18" aria-valuemin="0" aria-valuemax="100"></div>
+  <p>Христианство</p>
+</div>
+
+
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 14%" aria-valuenow="14" aria-valuemin="0" aria-valuemax="100"></div>
+  <p>Ислам</p>
+</div>
+
+
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 11%" aria-valuenow="11" aria-valuemin="0" aria-valuemax="100"></div>
+  <p>Даосизм</p>
+</div>
+
+
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+  <p>Индуизм</p>
+</div>
+
+
+
+
+				</div>
 		</div>
 										
 			
