--- a/singapore/src/religion.html
+++ b/singapore/src/religion.html
@@ -156,11 +156,11 @@
 					  <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
 					  <p>Буддизм</p>
 					</div>
-				
+
 
 <div class="progress">
   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 18%" aria-valuenow="18" aria-valuemin="0" aria-valuemax="100"></div>
-  <p>Христианство</p>
+  <p >Христианство</p>
 </div>
 
 
@@ -181,7 +181,72 @@
   <p>Индуизм</p>
 </div>
 
-
+<br><br>
+<h3><strong>Религия в Сингапуре</strong></h3>
+<p>
+	Из-за исторических особенностей и этнической пестроты населения в Сингапуре представлено несколько религиозных конфессий и течений, ни одно из которых не является доминирующим. Свобода вероисповедания гарантируется конституцией республики (15-я статья[en])[2][3]. По состоянию на 2010 год основными конфессиями в Сингапуре были буддизм (33,3 %), христианство (18,3 %), ислам (14,7 %), даосизм (10,9 %) и индуизм (5,1 %), других религий придерживалось около 0,7 % населения. Нерелигиозными считали себя 17,0 % сингапурцев (в 2000 году — 14,8 %)[1]. В стране находится несколько примечательных культовых сооружений, в том числе первой половины XIX века, ведётся религиозное строительство, особенно по программе возведения новых мечетей. Несмотря на большое этно-религиозное разнообразие, в стране практически отсутствует религиозный экстремизм и вражда между членами различных конфессий. Среди молодёжи, особенно китайской, наблюдается отход от традиционных ценностей, в том числе от религиозных обрядов и приверженности культу предков.
+</p>
+<h3>Основные этнические группы</h3>
+<p>
+	По состоянию на 2010 год в Сингапуре проживало 3,771 млн человек (в 2000 году — 3,273 млн), из которых 74,1 % были китайцами (в 2000 году — 76,8 %), 13,4 % — малайцами (в 2000 году — 13,9 %), 9,2 % — индийцами (в 2000 году — 7,9 %) и 3,3 % принадлежало к другим этническим группам (в 2000 году — 1,4 %)[1]. В 1973 году в Сингапуре проживало свыше 1,7 млн китайцев, более 370 тыс. малайцев, около 155 тыс. индийцев, около 40 тыс. европейцев и 25 тыс. евразийцев или евразиатов (группа смешанного европейско-азиатского происхождения — европейско-китайские, европейско-индийские и в меньшей мере европейско-малайские метисы, говорившие преимущественно на английском
+</p>
+<p>
+	Среди сингапурских китайцев 43 % исповедовали буддизм ветви махаяна (в 2000 году — 53,6 %), 20,1 % — христианство (в 2000 году — 16,5 %), 14,4 % — даосизм (в 2000 году — 10,8 %), 0,4 % — ислам (в 2000 году — 0,3 %), 0,3 % — другие религии (в 2000 году — 0,3 %), 21,8 % считались нерелигиозными (в 2000 году — 18,6 %)[1]. Китайская община в подавляющем большинстве представлена потомками выходцев из южных провинций Китая и распадается на землячества (гунсы) по месту происхождения и диалекту. Более 2/5 сингапурских китайцев составляют фуцзяньцы (хокло, фучжоу, чаошань и путянь), свыше 1/5 — гуандунцы (кантонцы), остальные — хайнаньцы, гуансийцы и хакка. Хакка основали свой первый храм в Сингапуре в 1823 году, кантонцы — в 1824 году, чаошань — в 1826 году, фуцзяньцы — в 1828 году, хайнаньцы — в 1857 году. Этнокультурные особенности выходцев из разных провинций Китая долго сохраняли своё значение и на новом месте, но со временем утратили свою роль. Нередко землячества объединяют людей одинаковых и смежных профессий. Среди сингапурских китайцев распространены браки внутри своих земляческих общин. Немалую роль продолжают играть клановые ассоциации, постепенно падает влияние некогда активных тайных обществ (триад
+</p>
+<p>
+	98,7 % малайцев исповедовали ислам (в 2000 году — 99,6 %), 0,7 % — христианство (в 2000 году — 0,3 %), 0,2 % — буддизм (в 2000 году — 0,1 %), 0,1 % — индуизм, 0,1 % — другие религии, 0,2 % считались нерелигиозными (в 2000 году — 0,1 %)[1]. К малайцам традиционно причисляются и выходцы из Индонезии, которые составляют 1/5 часть малайской общины Сингапура (главным образом яванцы, а также бугисы, банджары, минангкабау, мадурцы, ачехцы и сунды). На островах и в некоторых других местах сохранились потомки аборигенов Сингапура — оранг-лауты («люди моря»), которые в значительной степени ассимилированы другими малайцами. Главным связующим элементом различных групп малайской общины Сингапура является ислам. Все малайцы считают себя единой общиной, хотя и осознают различия в своём происхождении. В целом малайцы Сингапура почти не отличаются от малайцев Малайзии, обладая одинаковым языком и культурой
+</p>
+<p>
+	Среди индийцев Сингапура 58,9 % исповедовали индуизм (в 2000 году — 55,4 %), 21,7 % — ислам (в 2000 году — 25,6 %), 12,8 % — христианство (в 2000 году — 12,1 %), 0,8 % — буддизм (в 2000 году — 0,7 %), 4,6 % — другие религии, главным образом сикхизм (в 2000 году — 5,6 %), 1,1 % считались нерелигиозными (в 2000 году — 0,6 %)[1]. Свыше 3/5 индийской общины Сингапура составляют тамилы (в том числе ланкийские), за которыми следуют малаяли, каннара, телугу и другие дравидоязычные народы. Около 1/6 индийцев являются выходцами из Северной Индии и Пакистана (главным образом панджабцы, а также синдхи, хиндустанцы, бенгальцы, гуджаратцы и маратхи)[комм. 3]. Проживают небольшие группы сингалов из Шри-Ланки и непальцев[25][19][26].
+</p>
+<p>
+	Среди других этнических групп 57,6 % исповедовали христианство (в 2000 году — 53,3 %), 20,2 % — буддизм (в 2000 году — 13,7 %), 9,2 % — ислам (в 2000 году — 22,3 %), 0,8 % — индуизм (в 2000 году — 1,1 %), 0,6 % — даосизм (в 2000 году — 0,2 %), 1,1 % — другие религии (в 2000 году — 1,3 %), 10,6 % считались нерелигиозными (в 2000 году — 8,1 %)[1]. Среди европейцев преобладают англичане, проживают также американцы, шотландцы, голландцы, евреи, армяне и португальцы. Европейцы и евразийцы — преимущественно протестанты и католики, евреи — иудеи, армяне — приверженцы Армянской апостольской церкви. В Сингапуре имеются небольшие общины арабов, афганцев, японцев, бирманцев, филиппинцев, тайцев и корейцев. Арабы являются потомками выходцев из различных стран Северной Африки и Ближнего Востока, в подавляющем большинстве они исповедают ислам суннитского направления, но есть небольшая группа ливанских христиан. Афганцы исповедуют ислам суннитского направления ханафитского мазхаба[28][29][30].
+</p>
+<p>
+	Также в Сингапуре имеется значительная община трудовых мигрантов из Индии, Бангладеш и Китая, которые заняты на низкооплачиваемых работах (например, в строительстве, на транспорте, в сфере общественного питания, на судостроительных верфях, которые производят нефтяные платформы). Они проживают в общежитиях и отсылают большую часть заработанных денег на родину. Большинство этих иммигрантов после окончания контракта возвращаются домой, но некоторые оседают в Сингапуре[31].
+</p>
+<p>
+	На единственно действующем в Сингапуре кладбище Цайцоган существуют отдельные секции для захоронения христиан, китайцев, индуистов, мусульман, ахмадитов, евреев, парсов и бахаистов. В частных и муниципальных колумбариях также существуют отдельные секции для различных этно-религиозных групп[32].
+</p>
+<h3 id="budizm">
+	Буддизм
+</h3>
+<br>
+<img src="img/buda.jpg" class="displayed" alt="">
+<p>
+	По состоянию на 2010 год 33,3 % населения Сингапура исповедовали буддизм (в 2000 году — 42,4 %)[1]. Крупнейшей по численности группой последователей буддизма ветви махаяна являются китайцы. Также имеются небольшие общины приверженцев ветвей тхеравада и ваджраяна — выходцы из Шри-Ланки, Мьянмы и Таиланда, вьетнамцы, японцы, часть индийцев, небольшие группы малайцев, европейцев, евроазиатов и американцев. Все буддийские общины Сингапура автономны, храмы, учреждаемые преимущественно на этноконфессиональной основе, являются центрами религиозной активности для своих приходов. В стране активны буддийские миссионеры из Тайваня, Шри-Ланки, Тибета и Японии (Сока Гаккай)[33][34][35][36][37][38]. Махаяна в Сингапуре представлена несколькими школами, в частности цзинтуцзун и чань, ваджраяна — школами гелуг и ньингма. Активность зарубежных миссионеров привела к тому, что большинство храмов и религиозных центров Сингапура разделилось на три основные течения — китайский (традиционный), тайский и тибетский буддизм[39].
+</p>
+<p>
+	Буддизм играет большую роль в быту и повседневной жизни китайской общины. В общественной и социальной деятельности буддисты действуют активнее, чем сторонники даосизма и конфуцианства, а организации приверженцев тхеравады уступают по размаху работы махаянистским. В стране имеется несколько крупных буддийский организаций: Буддийская сангха Сингапура, объединяющая всех буддистов, Китайская буддийская ассоциация, Буддийский союз, Буддийская федерация Сингапура, Сингапурская буддийская ложа, Wat Ananda Youth (WAY) и другие. Среди наиболее влиятельных и многочисленных буддийских объединений лидируют те, в которых состоят преимущественно китайцы (приверженцы махаяны). Буддийская сангха входит в состав Всемирного братства буддистов и владеет храмами, монастырями, школами, молодёжными центрами, различной недвижимостью, издательством и рядом печатных изданий (различная религиозная хроника регулярно печатается и в светской прессе). В последние десятилетия в Сингапуре обосновались новые буддийские организации, особенно те, что представляют популярное течение «гуманистического буддизма», в том числе тайваньская Фогуаншань[40], тайваньский Фонд Цыцзи[41] и американская Международная ассоциация Свет Будды[42]. Не отстают от них в активности и различные организации тибетского буддизма, а также приверженцы «христианизированного» буддизма (Thekchen Choling, Gelugpa Buddhist Association, Tibetan Buddhist center, PannaYouth Center)[39][43]. В китайских школах, особенно начальных, большое внимание уделяется преподаванию основ буддизма[33][44][45].
+</p>
+<p>
+	Координацией сугубо конфессиональной деятельности всех сингапурских буддийских общин занимается учреждённая в 1978 году Сингапурская организация Будда-яна (включает в себя духовных лиц, принадлежащих к обеим ветвям буддизма). Она же занимается распространением идей буддизма, установлением контактов с представителями других вероисповеданий, благотворительностью, но не контролирует отдельные общины. Из благотворительных и культурно-просветительских учреждений ветви махаяна выделяются Наньянское отделение буддийской культуры и Сингапурская общедоступная клиника[44]. Новые организации «гуманистического буддизма» активно наращивают своё присутствие в интернете, издают газеты и журналы, основывают общественные центры для молодёжи и стариков, образовательные центры и программы, медицинские учреждения. Такой прозелитизм привёл к тому, что многие специалисты стали разделять сингапурских буддистов на приверженцев традиционного и реформистского буддизма (сперва первых было больше, но число вторых росло быстрыми темпами). К традиционалистам принадлежат приверженцы китайского синкретизма, в то время как реформисты выступают за очищение буддизма от различных наслоений, предрассудков, мистических ритуалов и возвращение к истокам канонической веры (особый акцент они делают на преимуществе буддийской идеологии над ритуалами)[39][46].
+</p>
+<br><br>
+<h3 id="christ">Христианство</h3>
+<br>
+<img src="img/chram.jpg" class="displayed" alt="">
+<p>
+	По состоянию на 2010 год христианство исповедовали 18,3 % сингапурцев (в 2000 году — 14,6 %)[1]. Эта религия начала распространяться среди местного населения в первой половине XIX века благодаря европейским миссионерам. Кроме того, её носителями были уже обращённые в христианство представители народов других частей Азии (китайцы и индийцы), прибывавшие в Сингапур. Сегодня наиболее крупными этническими группами среди христиан являются китайцы, англичане и индийцы (христиане-китайцы в большинстве своём сторонники римо-католической церкви, англичане — англиканской церкви, индийцы — методистской). В стране представлены многочисленные христианские направления и организации; большинство составляют последователи западного христианства (католики и протестанты), но есть и небольшая группа сторонников восточного христианства (армяне, православные и униаты)[63].
+</p>
+<p>
+	Большинство приверженцев католицизма составляют китайцы, остальные — европейцы (американцы, немцы, португальцы, испанцы, шотландцы), индийцы (группы малаяли, телугу, тамилов, сингалов), филиппинцы, индонезийцы, корейцы и японцы. Имеется небольшая франкоязычная католическая община, находящаяся под патронатом Парижского общества заграничных миссий. Уже в XVI веке на острове обосновалась португальская католическая миссия, затем стали прибывать французские миссионеры-католики. В 1841 году в Сингапуре был учреждён епископат, под началом которого состояло около 500 местных католиков[комм. 4]. В конце XIX — начале XX века большую роль в распространении католицизма и строительстве храмов в Сингапуре сыграл китайский коммерсант и филантроп Хиок Чан Лоу. Римо-католическая церковь имеет свои соборы, приюты, гуманитарные фонды, образовательные программы, школы и семинарию, выпускает различную религиозную литературу и периодику (в католических учебных заведениях обучается немало детей из семей, принадлежащих к другим конфессиям). Возглавляет местную католическую общину архиепископ из числа сингапурских китайцев (архиепархия Сингапура была образована в 1972 году)[64][65][66][67].
+</p>
+<p>
+	Кафедральным собором сингапурской архиепархии является собор Доброго Пастыря, построенный в 1847 году (он же является центром китайских, корейских и филиппинских католиков)[68]. Среди других католических храмов Сингапура выделяются церковь Святых Петра и Павла, построенная в 1870 году, церковь Лурдской Божией Матери, построенная в 1888 году (центр тамильских и сингальских католиков)[69], церковь Рождества Пресвятой Девы Марии, построенная в 1901 году[70], церковь Святого Семейства, основанная в 1902 году (центр католиков-перанакан)[71], церковь Святейшего Сердца Иисуса, построенная в 1910 году[72], церковь Святого Иосифа, построенная в 1912 году (центр португальских евразийцев или кристангов)[73], церковь Святой Терезы, построенная в 1928 году[74], церковь Новены, построенная в 1950 году, церковь Святого Франциска Ксаверия, построенная в 1958 году, церковь Святой Троицы, построенная в 1988 году[75], церковь Пресвятой Девы Марии Царицы Ангелов, построенная в 2003 году[76], часовня Доброго Пастыря (центр франкоязычных католиков).
+</p>
+<h3 id="islam">Ислам</h3>
+<p>
+	По состоянию на 2010 год ислама придерживалось 14,7 % населения Сингапура (в 2000 году — 14,9 %)[1]. Ислам распространился на территории Сингапура в XIV — XV веках, особенно в период Малаккского султаната (хотя следы исламского присутствия на территории современного Сингапура относятся ещё к XI — XIII векам). После установления британского господства в связи с притоком китайских иммигрантов ислам постепенно был оттеснён на второй план. В настоящее время основными приверженцами ислама являются малайцы, арабы, часть индийцев и небольшая группа китайцев[144][62].
+</p>
+<p>
+	В Сингапуре преобладает суннизм шафиитского мазхаба, который исповедует большинство малайцев, яванцев, китайцев-мусульман и часть арабов — выходцев из Хадрамаута (арабская община шафиитов владеет несколькими собственными мечетями). Сингапурские шафииты имеют в своём распоряжении мечети, исламские центры, начальные школы и медресе, а также поддерживают связи с общинами и учебными заведениями Малайзии, Индонезии и Йемена[144][62][98].
+</p>
+<p>
+	Сторонники ханафитского мазхаба имеются среди выходцев из Пакистана и Индии. Также в Сингапуре представлены исмаилиты (в основном выходцы из Пакистана), ибадиты (выходцы из Омана) и ахмадиты (часть пакистанцев, индийцев и небольшая группа малайцев). Сингапур является центром миссионерской деятельности секты ахмадийе в Юго-Восточной Азии, здесь находится издательство «Аль-Ахмадийе Пресс», выпускающее на малайском и английском языках религиозную литературу и периодику[145]. Небольшая группа яванцев и малайцев исповедует кебатинан[en] — синкретический культ, объединяющий в себе анимистические, индуистские, буддийские и суфийские ритуалы (большинство мусульман считают их «неверными»)[146].
+</p>
+<br>
+<img src="img/mechet.jpg" class="displayed" alt="">
 
 
 				</div>
