--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Интернет телевидение</title>
-	<link rel="stylesheet" href="src/style.css">
+	<link rel="stylesheet" href="src/css/style.css">
+	<link rel="stylesheet" href="src/css/bootstrap.min.css">
+	<link rel="stylesheet" href="src/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
 </head>
@@ -15,10 +17,8 @@
 				<a href="#home">ГЛАВНАЯ</a>
 				<a href="#about">СТОИМОСТЬ</a>
 				<a href="#leaders">УСЛОВИЯ</a>
-				<a href="#advantages">ПРЕИМУЩЕСТВА</a>
-				<a href="https://ru.wikipedia.org/wiki/Города_Кубы">CITIES</a>
-				<a href="#gallery">ГАЛЕРЕЯ</a>
-				<a href="https://www.google.com/maps/place/Куба/@10.2305604,-103.3617138,3z/data=!4m5!3m4!1s0x88cd49070f7a4cb5:0x798cf7529110a41a!8m2!3d21.521757!4d-77.781167">MAP</a>
+				<a href="#advantages">ДОКУМЕНТАЦИЯ</a>
+				<a href="#connect" class="redicon">ПОДКЛЮЧИТЬСЯ</a>
 				<a href="" id = "menu" class = "icon">&#9776;</a>
 			</div>
 		</nav>
@@ -69,9 +69,9 @@
 					<p>Новая эра телевидения позволяет воспроизводить сигнал высшего качества.</p>
 
 					<ul>
-						<li>Подключение 2490 тг.</li>
-						<li>Первый месяц </li>
-						<li>третий плюс</li>
+						<li>Гибкая настройка каналов!</li>
+						<li>Любимые каналы на первом месте!</li>
+						<li>Скрытие нежелательных каналов и контента!</li>
 					</ul>
 				</div>
 			</div>
@@ -89,29 +89,29 @@
 
 				<div class="card">
 					<div class="photo"><img src="src/img/gift.png" class="lilmod"></div>
-					<h4 class="name">ПОПРОБУЙТЕ БЕСПЛАТНО!</h4>
-					<p class="position">Мы даем возможность безвозмездно ознакомиться со всеми преимуществами IPTV</p>
+					<h4 class="name bbb">ПОПРОБУЙТЕ БЕСПЛАТНО!</h4>
+					<p class="position bbb">Мы даем возможность безвозмездно ознакомиться со всеми преимуществами IPTV</p>
 					<p class="about_position"></p>
 				</div>
 
 				<div class="card">
 					<div class="photo"><img src="src/img/incognito.png" class="lil"></div>
-					<h4 class="name">КОНФИДЕНЦИАЛЬНОСТЬ</h4>
-					<p class="position">Ваша личная информация в надежных руках, отправля данные нам мы гарантируем их сохранность от третьих лиц.</p>
+					<h4 class="name bbb">КОНФИДЕНЦИАЛЬНОСТЬ</h4>
+					<p class="position bbb">Ваша личная информация в надежных руках, отправля данные нам мы гарантируем их сохранность от третьих лиц.</p>
 					<p class="about_position"></p>
 				</div>
 
 				<div class="card">
 					<div class="photo"><img src="src/img/use.png" class="lilmod"></div>
-					<h4 class="name">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</h4>
-					<p class="position">Минимальные требования к вам с нашей стороны, берите и пользуйтесь!</p>
+					<h4 class="name bbb">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</h4>
+					<p class="position bbb">Минимальные требования к вам с нашей стороны, берите и пользуйтесь!</p>
 					<p class="about_position"></p>
 				</div>
 
 				<div class="card">
 					<div class="photo"><img src="src/img/sale.png" class="lil"></div>
-					<h4 class="name">СКИДКИ</h4>
-					<p class="position">Мы оперируем самыми последними событиями и гибко подстраиваемся под них! Ожидайте актуальные скидки и акции!</p>
+					<h4 class="name bbb">СКИДКИ</h4>
+					<p class="position bbb">Мы оперируем самыми последними событиями и гибко подстраиваемся под них! Ожидайте актуальные скидки и акции!</p>
 					<p class="about_position"></p>
 				</div>
 
@@ -119,128 +119,108 @@
 		</div>
 	</div>
 
-	<div class="main_services" id="advantages">
+
+	<div class="main_services" id="connect">
 		<div class="wrapper">
-			<h1>НАШИ ПРЕИМУЩЕСТВА</h1>
+			<h1>ПОДКЛЮЧИТЬСЯ</h1>
 			<div class="line"></div>
 			<p>
 				<i>
-					IPTV расширяет возможности обычного всем нам знакомого телевидения.
-					Расширяет не до немыслимых широт, конечно, но делает просмотр телевизора более удобным, что в наш стремительный век позволяет экономить наше драгоценное время.
+					Для связи с нами напишите по номеру 
 				</i>
 			</p>
+			<a href="https://wa.me/77051659429?text=Хочу%20подключить%20IP-TV">WHATSAPP</a>
+	</div>
+
+
+
+	<div class="main_services" id="advantages">
+		<div class="wrapper">
+			<h1>ДОКУМЕНТАЦИЯ</h1>
+			<div class="line"></div>
+			<p>
+				<i>
+					Как и любая другая компания мы предоставляем набор документов - условий для ознакомления!
+				</i>
+			</p>
+
+
+
+<div class="accordion" id="accordionExample">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ
+        </button>
+      </h2>
+    </div>
+
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body">
+        Команда программы технических консультаций "okTV" разработала эту политику конфиденциальности, чтобы дополнительно разъяснить порядок сбора и распространения информации на нашем Сайте (http://oktv.fun/). Как правило, Вы можете посещать открытые разделы нашего Сайта, не идентифицируя себя. Общая политика предусматривает сбор лишь той информации, которая необходима для участия в программе технических консультаций "okTV". Пользование нашим сайтом и становление нашим клиентом равнозначно Вашему подтверждению и принятию условий настоящей Политики конфиденциальности.   1. Информация, которую мы собираем 1.1. Мы получаем и храним предоставленные Вами личные сведения, а также определенную информацию, связанную с совершаемыми операциями, которую мы собираем в ходе использования/просмотра Вами разделов нашего сайта или нашими Услугами. Ниже представлен перечень основных методов, используемых нами для сбора личных данных и информации. 1.2. Регистрационная информация 1.2.1. Чтобы стать участником программы технических консультаций “okTV”, Вы должны указать свой номер телефона и согласиться с политикой конфиденциальности и условием использования сервиса. Процесс регистрации предусматривает обязательное предоставление определенной контактной информации (номер мобильного/сотового телефона). 2. Данные об использовании услуг 2.1. Когда Вы пользуетесь нашим сайтом или услугами, мы можем проводить автоматический сбор определенных видов, данных о том, как именно Вы им пользуетесь. 3. Данные, не являющиеся личными сведениями 3.1. Данные, не являющиеся личными сведениями — это информация, которую не представляется возможным соотнести с кем-либо конкретно. Данные, не являющиеся личными сведениями, могут включать в себя также обобщенную информацию о группе или категории услуг либо информацию о пользователе без упоминания каких-либо идентифицирующих сведений, которые можно было бы соотнести с ним. Такие данные могут включать в себя общие сведения о трафике, тенденции пользования, анонимные демографические сведения и данные исследований. Обобщенная информация помогает нам лучше понять тенденции и потребности наших пользователей, более целенаправленно разрабатывать новые функции и менять наш сайт. 3.2. При посещении открытых разделов нашего сайта мы не собираем информации о личности посетителя и иных личных сведений о нем. Однако, как уже упоминалось выше, на основании того, какие именно действия Вы совершаете у нас на сайте, мы собираем определенные сведения о Вашем трафике, не являющиеся личными. 4. Раскрытие личных сведений третьим лицам 4.1. Мы не сдаем в аренду, не продаем и не передаем в порядке обмена личные сведения иным физическим лицам и экономическим агентам, не являющимся нашими связанными сторонами, за исключением: передачи личных сведений с согласия пользователя для целей осуществления запрашиваемой им сделки (что требуется для совершения определенных коммерческих операций); случаев, когда раскрытия личных сведений требует действующее законодательство, а также в случаях, в которых раскрытие личных сведений оправдывается защитой наших прав и собственности. Ниже ситуации, оправдывающие раскрытие личных сведений, конкретизированы дополнительно.
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h2 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          УСЛОВИЯ ИСПОЛЬЗОВАНИЯ
+        </button>
+      </h2>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+      <div class="card-body">
+        1. Принятие условий 1.1. Внесение оплаты за участие в программе технических консультаций "okTV" означает, что Вы становитесь действующим участником проекта и подтверждаете заключение юридически обязывающего соглашения между Вами (физическим лицом, абонентом) с одной стороны, и "okTV" с другой стороны. 1.2. Пользуясь "okTV", Участник тем самым принимает условия действующего соглашения. 2. Условия участия 2.1. Сервис “okTV” не хранит, не транслирует и не ретранслирует собственный контент. Сервис "okTV" предоставляет исключительно техническую консультацию для ознакомления абонента с функционалом телевизора и/или телевизионной приставки и решения проблем, возникающих при их эксплуатации, которая осуществляется за счет внесения первоначального членского взноса и ежемесячных платежей абонента, предоставляющие ему персональное право на ежедневную консультацию по вопросам эксплуатации телевизоров и/или телевизионных приставок и решения проблем, возникающих при их использовании. 2.2. "okTV" не несёт никакую ответственность за места происхождения, легальность и качество телеканалов и радиостанций, которые просматривают/могут просматривать абоненты, мы лишь предоставляем техническую консультацию, которая знакомит абонента с функционалом его телевизора и/или телевизионной приставки, и которая помогает решить проблемы технического характера, возникающие при эксплуатации телевизоров и/или телевизионных приставок. Абонент платит исключительно за получение данных консультаций. Консультации осуществляются посредством аудио- и/или видеозвонков, текстовых и/или аудио сообщений. 3. Оплата сервиса 3.1. Мы оставляем за собой право в любой момент изменять сумму платежей за право участия абонента в программе технической поддержки “okTV”. 3.2. Участник может в любое время отказаться от участия в программе, но в этом случае "okTV" не возвращает остаток первоначального взноса, который абонент вносит при подключении к программе консультаций. Под страхом немедленного прекращения оказания технической поддержки от программы "okTV", при прохождении регистрационной формы участник сообщает о себе информацию, необходимую для обеспечения предоставляемых услуг. 3.3 Под словами “Абонентская плата” команда программы технических консультаций “okTV” подразумевает ежемесячные взносы, которые осуществляет участник программы для продления своего участия в данной программе. Под словами “Подключение”, “Подключение телевидения”, “Подключение интернет-телевидения”, “Подключение IPTV”, “Подключение сервиса”, “Настройка IPTV”, “ Настройка телевидения”, “Настройка интернет-телевидения” подразумевается подключение к программе технических консультаций “okTV” и требование внесения первоначального членского взноса. 4. Безопасность личных данных активных/неактивных/потенциальных участников программы консультирования. 4.1. Для получения услуг консультирования участник указывает номер телефона посредством формы на веб-ресурсе (веб-сайте) http://oktv.fun/ (“okTV” оставляет за собой право смены адреса данного веб-ресурса/веб-сайта). Участник сам несет ответственность за соблюдение конфиденциальности и сохранности своих личных данных.
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h2 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          ДЛЯ ПРАВООБЛАДАТЕЛЕЙ
+        </button>
+      </h2>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+      <div class="card-body">
+        Сервис okTV не хранит, не транслирует и не ретранслирует контент. Предоставление услуги абоненту заключается в оказании ему технической консультации с целью ознакомления с функционалом телевизора и/или телевизионной приставки, а также для решения проблем, возникающих при эксплуатации данных устройств. Сервис не несёт никакую ответственность за места происхождения, легальность и качество телеканалов и радиостанций, которые просматривает/может просматривать клиент, мы лишь предоставляем технические консультации по вопросам эксплуатации телевизоров и/или телевизионных приставок, а также консультации для решения возникающих при их эксплуатации технических проблем. Сервис не берет денежных средств за контент, который участник программы консультаций может получать и/или просматривать/прослушивать. Сервис получает только взносы от пользователей сети интернет за предоставление технических консультаций, которые описывают функционал устройств абонента, и которые решают проблемы технического характера.Для рассмотрения претензии необходимо нам предоставить данную информацию: 1) Имя правообладателя. 2)Прямая ссылка на Контент, размещение которого является предполагаемым нарушением. 3)Ваше заявление относительно Прав на Контент.                                                                                                                   Мы оставляем за собой право запросить электронные копии документов, подтверждающих Вашу личность, статус и действительность Вашего права запрещать распространение Контента посредством Интернета. Мы оставляем за собой право опубликовать и/или передать третьим лицам любую информацию, полученную нами.
+      </div>
+    </div>
+  </div>
+</div>
 		
-			<div class="services_cards">
-
-				<div class="services_card">
-					<img src="src/img/mojito.png">
-					<h4>Ром, сигары и мохито</h4>
-					<p>Атмосфера Кубы – это легендарные сигары, лучший в мире ром, прохладный мохито и пьянящий дайкири. Многие едут сюда именно за этими атрибутами, которые помогают ощутить радость жизни, свободу, мечту. Где, как не на их родине, наслаждаться подобными приятными вещами!</p>
-				</div>
-
-				<div class="services_card">
-					<img src="src/img/planet.png">
-					<h4>Живописная природа</h4>
-					<p>Остров славится своими прекрасными пейзажами, красивейшими реками и завораживающими водопадами, буйством красок тропической растительности и уникальными биосферными заповедниками. А некоторые виды животных и птиц, например, карибские антилопы и фламинго, обитают только здесь.</p>
-
-				</div>
-
-				<div class="services_card">
-					<img src="src/img/visa.png">
-					<h4>Безвизовый въезд в страну</h4>
-					<p>Куба – одна из стран, для въезда в которые гражданам СНГ не нужно оформлять визу. И это очень удобно, тем более, что есть прямые рейсы из Москвы на остров. А для тех, кто хочет сэкономить на перелете, существуют рейсы с пересадками.</p>
-				</div>
-
-				<div class="services_card">
-					<img src="src/img/beach.png">
-					<h4>Комфортный пляжный отдых</h4>
-					<p>На Кубе придется по душе всем любителям классического пляжного отдыха. Пляжи здесь есть разные – на Исла-Хувентуд с экзотическим черным песком, на Сантьяго-де-Куба – с серым, на Плайя-Герон – с ослепительно-белым. И везде прозрачная, изумрудного цвета, теплая вода, на дне нет острых камней и морских ежей, сход ровный.</p>
-				</div>
-			</div>
+			
 						
 		</div>
 	</div>
 
 
-		<div class="all">
-		<input checked type="radio" name="respond" id="desktop">
-			<article id="slider">
-					<input checked type="radio" name="slider" id="switch1">
-					<input type="radio" name="slider" id="switch2">
-					<input type="radio" name="slider" id="switch3">
-					<input type="radio" name="slider" id="switch4">
-					<input type="radio" name="slider" id="switch5">
-				<div id="slides">
-					<div id="overflow">
-						<div class="image">
-							<article><img src="src/img/c3.svg" class="ccc"></article>
-							<article><img src="src/img/c1.svg" class="ccc"></article>
-							<article><img src="src/img/c2.svg" class="ccc"></article>
-						</div>
-					</div>
-				</div>
-				<div id="controls">
-					<label for="switch1"></label>
-					<label for="switch2"></label>
-					<label for="switch3"></label>
-				</div>
-				<div id="active">
-					<label for="switch1"></label>
-					<label for="switch2"></label>
-					<label for="switch3"></label>
-				</div>	
-			</article>
-	</div>
-
-
-	<div class = "wrappper">
-		<div class = "main_work" id="gallery">
-		<h1>ГАЛЛЕРЕЯ ЖИВОПИСИ</h1>
-		<div class="line"></div>
-		<p>В 1959 г. были созданы Национальная школа искусств и Высший институт искусств. Это было сделано в рамках государственной программы художественного образования. Третий этап развития кубинской живописи характеризуется обилием художников-авангардистов. В последние годы в стране появилось множество талантливых художников.
-	Кубинское искусство получает международное признание, чему способствуют художественные выставки, и в частности Гаванское биеннале. Чтобы познакомиться с колониальным и современным искусством Кубы, следует отправиться в Национальный музей изящных искусств в Гаване.
-
-	А, чтобы познакомиться с работами молодых и очень перспективных художников острова Свободы, нужно всего лишь посетить выставку «La CUBA»в помещении Галереи «Ул. Большая Ремесленная» крупнейшего творческого кластера современного искусства г Санкт-Петербурга «АРТМУЗА».
-
-	Яркие, сочные, словно живые, пейзажи, портреты и городские зарисовки стали основными «изюменками» работ кубинских художников: Alonso, Yadiel Ganzales, Humberto Ulloa, Santos, Rheinel, Mayor и Victor.</p>
-
-			<div class="gellery">
-				<div class="line1">
-					<img src="src/img/art1.png">
-					<img src="src/img/art2.png">
-					<img src="src/img/art3.png">
-					<img src="src/img/art4.png">
-				</div>
-				<div class="line2">
-					<img src="src/img/art5.png">
-					<img src="src/img/art6.png">
-					<img src="src/img/art7.png">
-					<img src="src/img/art8.png">
-				</div>
-				<div class="line3">
-					<img src="src/img/cuba9.png">
-					<img src="src/img/cuba10.png">
-					<img src="src/img/cuba11.png">
-					<img src="src/img/cuba12.png">
-				</div>
-			</div>
-		</div>
-	</div>
 	
 
-	<audio autoplay loop>
-    	<source src="src/song/songCuba.mp3">
-	</audio>
+
+	
+	
+
+	
 
 
 <div class="finish">
-	<a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/456368/IP_rights_in_USA.pdf">
-        <i class="fas fa-shield-alt"></i>
+	
          Все праза защищены 2020 год. Алматы.
-    </a> 
 </div>
 
 
+
+
+
+<script src="https://kit.fontawesome.com/24dc904e36.js" crossorigin="anonymous"></script>
+			<script src="src/js/jquery-3.4.1.min.js"></script>
+			<script src="src/js/popper.min.js"></script>
+			<script src="src/js/bootstrap.min.js"></script>
+			<script src="src/js/main.js"></script>
 </body>
 </html>
 
